# token-trace

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  demo.html  dummy_data.jsonl  pyproject.toml  requirements.txt  token_trace_app.py
.devcontainer/: devcontainer.json
.github/workflows/: build_and_release.yaml  ci.yaml
analysis on SAEs/: SAE_generalisation_test (1).ipynb
app/: Dockerfile  README.md  pyproject.toml  requirements.txt  token_trace_app.py
app/data/: 3e25960a79dbc69b.csv  README.md  circuit_edge.csv  circuit_node.csv
app/data/28073a65f0596b26/: args.json  edge.csv
app/data/3e25960a79dbc69b/: args.json  node.csv
app/data/497e3b23528c9d21/: args.json
app/data/6992989f10902784/: args.json  edge.csv
app/data/cc20b5f8bcb7e6de/: args.json
app/data/d483b0da1675741b/: args.json
app/data/d4e8742f253fcfdd/: args.json
app/data/debug/: args.json
assets/: node_attributions_top_10000.csv  sae_acts_top10.json
data/: 838090467864092769.csv
docs/: load_data.md
examples/: dashboard_demo.py  demo.ipynb  node_attrib_streamlit.py  streamlit.py  streamlit_mouseover.py
src/: create_dummy_data.py
src/token_trace/: compute_node_attribution.py  (+5 more)
tests/: conftest.py  test_display_token_trace.py  test_sae_activation_cache.py  test_sae_circuit.py  test_sae_patcher.py
token-trace-ui/: esbuild.js  iife.css  iife.js  package-lock.json  package.json
token_trace/: __init__.py  compute_node_attribution.py  display_token_trace.py  load_pretrained_model.py  print_prompt_info.py  sae_activation_cache.py  sae_patcher.py  types.py  utils.py
(+25 files in other folders)
