[tool.poetry]
name = "token-trace-ui"
version = "0.1.0"
description = ""
authors = ["Daniel Tan <dtch1997@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "token_trace_ui"}]

[tool.poetry.dependencies]
python = "^3.11"
token-trace = "^0.1.0"
streamlit = "^1.33.0"
st-annotated-text = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
